--- a/.github/workflows/manual-deploy-to-S3.yml
+++ b/.github/workflows/manual-deploy-to-S3.yml
@@ -9,13 +9,19 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
+  # This job will build and deploy static website to aws s3 bucket
+  build-and-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Runs a single command using the runners shell
-      - name: Send greeting
-        run: echo "Hello Artem"
+      # Runs commands using the runners shell
+      - name: Install Dependencies
+        run: |
+          node --version
+          npm ci --production
+
+      # Build static web site
+      - name: Build Angular Application
+        run: npm run build
