added checkout step

--- a/.github/workflows/manual-deploy-to-S3.yml
+++ b/.github/workflows/manual-deploy-to-S3.yml
@@ -16,6 +16,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       # Runs commands using the runners shell
       - name: Install Dependencies
         run: |
