--- a/.github/workflows/manual-deploy-to-S3.yml
+++ b/.github/workflows/manual-deploy-to-S3.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install Angular CLI
+        run: npm i -g @angular/cli
+
       # Runs commands using the runners shell
       - name: Install Dependencies
         run: |
