--- a/.github/workflows/manual-deploy-to-S3.yml
+++ b/.github/workflows/manual-deploy-to-S3.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: |
           node --version
-          npm ci --production
+          npm i
 
       # Build static web site
       - name: Build Angular Application
