--- a/.github/workflows/manual-deploy-to-S3.yml
+++ b/.github/workflows/manual-deploy-to-S3.yml
@@ -21,7 +21,7 @@ jobs:
     env:
       BUCKET: github-actions-demo.amalieiev.com
       REGION: us-east-1
-      DIST: dist
+      DIST: dist/github-actions-demo/browser
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
