--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "github-acctions-demo": {
+    "github-actions-demo": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/github-acctions-demo",
+            "outputPath": "dist/github-actions-demo",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -62,10 +62,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "github-acctions-demo:build:production"
+              "buildTarget": "github-actions-demo:build:production"
             },
             "development": {
-              "buildTarget": "github-acctions-demo:build:development"
+              "buildTarget": "github-actions-demo:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +73,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "github-acctions-demo:build"
+            "buildTarget": "github-actions-demo:build"
           }
         },
         "test": {
